<resources>
    <string name="app_name">TTA</string>
    <string name="action_settings">Settings</string>
    <string name="user_label">Usuario</string>
    <string name="user_edit">Introduce DNI</string>
    <string name="passwd_label">Contraseña</string>
    <string name="passwd_edit">Introduce password</string>
    <string name="button_login">Acceder</string>
    <string name="main_activity">Alumno de TTA</string>
    <string name="title_activity_menu">Evaluación de TTA</string>
    <string name="button_track">Seguimiento</string>
    <string name="button_test">Nuevo test</string>
    <string name="button_exercise">Nuevo ejercicio</string>
    <string name="button_send">Enviar</string>
    <string name="button_advise">Ver ayuda</string>
    <string name="button_file">Subir fichero</string>
    <string name="button_audio">Grabar audio</string>
    <string name="button_video">Grabar vídeo</string>
    <string name="button_picture">Sacar foto</string>
    <string name="login_error">Error de acceso</string>
    <string name="access_error">Error de comunicación</string>
    <string name="welcome">Bienvenido</string>
    <string name="lesson">Lección</string>
    <string name="title_activity_test">Nuevo Test</string>
    <string name="downloading">Conectando ...</string>
    <string name="correct">¡Correcto!</string>
    <string name="incorrect">¡Has fallado!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_exercise">Nuevo Ejercicio</string>
    <string name="send_ok">Envío correcto</string>
    <string name="no_camera">Tu móvil no dispone de cámara</string>
    <string name="no_micro">Tu móvil no dispone de micrófono</string>
    <string name="no_app">No dispones de la aplicación necesaria</string>
</resources>
